# zkSTARK_lib

./: Cargo.toml  test  test.rs
src/: FFPoly.rs  channel.rs  ffield_unit.rs  fib_with_spcore.rs  fibonacci_squares.rs  lib.rs  main.rs  main.rs.backup  merkle.rs  poly.rs  utils.rs
