[package]
name = "zkStark"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.4.1"
num-bigint = "0.4.3"
num-traits = "0.2.16"
polynomial = "0.2.5"
rand = "0.8.5"
sha2 = "0.10.7"
sp-core = "21.0.0"
